- fix: scroll bar no longer hidden on overflow

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -11,7 +11,7 @@ body {
   color: white;
   height: 100vh;
   font-family: Arial, Helvetica, Helvetica Neue, serif;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 h2 {
